--- a/style.css
+++ b/style.css
@@ -1,26 +1,48 @@
 * {
-    background-color: rgb(14, 155, 77);
+    background-color: rgba(14, 177, 87, 0.384);
+}
+.zagl-a {
+    background-color: rgb(14, 139, 177);
+    color: black
 }
 a {
-    color:#000000;
+    background-color: rgb(253, 0, 0);
+    color:#6b0808;
     text-decoration: none;
     text-align: center;
-    font-size: large;
+    font-size: x-large;
 }
-img {
-    /* картинка в центре*/
-}
+
 h3 {
     text-align: center;
     color:rgb(15, 4, 54)
 }
 .div-1 {
+    background-color: rgb(14, 139, 177);
     display: flex;
+    border-radius: 20px;
+    border: 1px solid black;
     justify-content: space-around;
+    flex-direction: row;
     width: 30%;
 }
 header {
     display: flex;
     justify-content: space-around;
 }
-
+.big-a {
+    margin-bottom: 100px;
+    border-radius: 20px;
+    border: 1px solid black;
+    padding: 0 10px;
+}
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.inf-h {
+    border-radius: 1px;
+    border: 5px solid black;
+}
