--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
-* {
-    background-color: rgba(14, 177, 87, 0.384);
-}
+
 .zagl-a {
-    background-color: rgb(14, 139, 177);
-    color: black
+    background-color: rgb(60, 60, 60);
+    color: rgb(255, 255, 255)
 }
 a {
     background-color: rgb(253, 0, 0);
-    color:#6b0808;
+    color:#000000;
     text-decoration: none;
     text-align: center;
     font-size: x-large;
+}
+.tb {
+    border: none;
+    background-color: #000000;
+    cursor: pointer;
+    font-size: 1.2rem;
+    padding: 15px 10px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: white;
+}
+.tb:hover {
+    background-color: gray;
+}
+.tb:active {
+    background-color: white;
+    color: black;
+}
+h1 {
+    background-color: rgba(255, 255, 255, 0);
 }
 
 h3 {
@@ -18,17 +37,19 @@ h3 {
     color:rgb(15, 4, 54)
 }
 .div-1 {
-    background-color: rgb(14, 139, 177);
+    background-color: rgb(60, 60, 60);
     display: flex;
-    border-radius: 20px;
     border: 1px solid black;
     justify-content: space-around;
     flex-direction: row;
     width: 30%;
+    padding: 10px 50px;
+    margin-bottom: 100px;
 }
 header {
     display: flex;
     justify-content: space-around;
+
 }
 .big-a {
     margin-bottom: 100px;
@@ -44,5 +65,17 @@ div {
 }
 .inf-h {
     border-radius: 1px;
-    border: 5px solid black;
+    border: 5px solid rgb(53, 151, 94);
+}
+.h-dark-mode {
+    background-color: rgb(37, 35, 35);
+    color: white;
+}
+.m-dark-mode {
+    background-color: rgb(37, 35, 35);
+    color: white;
+}
+.f-dark-mode {
+    background-color: rgb(37, 35, 35);
+    color: white;
 }
